HUST-编译原理/lab4/parser.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | Specifier ArrayDec SEMI
    7       | error SEMI
    8       | Specifier SEMI

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT ID LC DefList RC
   12                | STRUCT ID
   13                | STRUCT LC DefList RC

   14 ExtDecList: VarDec
   15           | VarDec COMMA ExtDecList

   16 VarDec: ID

   17 FuncDec: ID LP VarList RP
   18        | ID LP RP
   19        | error RP

   20 ArrayDec: ID LB Exp RB
   21         | ID LB RB
   22         | error RB

   23 VarList: ParamDec
   24        | ParamDec COMMA VarList

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmList RC
   27       | error RC

   28 StmList: %empty
   29        | Stmt StmList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | FOR LP Exp SEMI Exp SEMI Exp RP Stmt
   36     | WHILE LP Exp RP Stmt

   37 DefList: %empty
   38        | Def DefList

   39 Def: Specifier DecList SEMI
   40    | Specifier ArrayDec SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | Exp SELFADD
   57    | SELFADD Exp
   58    | Exp SELFSUB
   59    | SELFSUB Exp
   60    | Exp ADD_ASSIGNOP Exp
   61    | Exp MINUS_ASSIGNOP Exp
   62    | Exp STAR_ASSIGNOP Exp
   63    | Exp DIV_ASSIGNOP Exp
   64    | Exp DOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | ID
   68    | INT
   69    | FLOAT
   70    | CHAR
   71    | BREAK
   72    | CONTINUE

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 27
    INT <type_int> (258) 68
    ID <type_id> (259) 11 12 16 17 18 20 21 65 66 67
    RELOP <type_id> (260) 48
    TYPE <type_id> (261) 9
    FLOAT <type_float> (262) 69
    CHAR <type_char> (263) 70
    LP (264) 17 18 33 34 35 36 53 65 66
    RP (265) 17 18 19 33 34 35 36 53 65 66
    LB (266) 20 21
    RB (267) 20 21 22
    LC (268) 11 13 26
    RC (269) 11 13 26 27
    SEMI (270) 4 6 7 8 30 32 35 39 40
    COMMA (271) 15 24 42 73
    ASSIGNOP (272) 44 45
    PLUS (273) 49
    MINUS (274) 50 54
    STAR (275) 51
    DIV (276) 52
    AND (277) 46
    OR (278) 47
    DOT (279) 64
    NOT (280) 55
    STRUCT (281) 11 12 13
    RETURN (282) 32
    BREAK (283) 71
    CONTINUE (284) 72
    IF (285) 33 34
    ELSE (286) 34
    WHILE (287) 36
    FOR (288) 35
    ADD_ASSIGNOP (289) 60
    MINUS_ASSIGNOP (290) 61
    STAR_ASSIGNOP (291) 62
    DIV_ASSIGNOP (292) 63
    SELFADD (293) 56 57
    SELFSUB (294) 58 59
    UMINUS (295)
    LOWER_THEN_ELSE (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    program <ptr> (43)
        on left: 1
        on right: 0
    ExtDefList <ptr> (44)
        on left: 2 3
        on right: 1 3
    ExtDef <ptr> (45)
        on left: 4 5 6 7 8
        on right: 3
    Specifier <ptr> (46)
        on left: 9 10
        on right: 4 5 6 8 25 39 40
    StructSpecifier <ptr> (47)
        on left: 11 12 13
        on right: 10
    ExtDecList <ptr> (48)
        on left: 14 15
        on right: 4 15
    VarDec <ptr> (49)
        on left: 16
        on right: 14 15 25 43 44
    FuncDec <ptr> (50)
        on left: 17 18 19
        on right: 5
    ArrayDec <ptr> (51)
        on left: 20 21 22
        on right: 6 40
    VarList <ptr> (52)
        on left: 23 24
        on right: 17 24
    ParamDec <ptr> (53)
        on left: 25
        on right: 23 24
    CompSt <ptr> (54)
        on left: 26 27
        on right: 5 31
    StmList <ptr> (55)
        on left: 28 29
        on right: 26 29
    Stmt <ptr> (56)
        on left: 30 31 32 33 34 35 36
        on right: 29 33 34 35 36
    DefList <ptr> (57)
        on left: 37 38
        on right: 11 13 26 38
    Def <ptr> (58)
        on left: 39 40
        on right: 38
    DecList <ptr> (59)
        on left: 41 42
        on right: 39 42
    Dec <ptr> (60)
        on left: 43 44
        on right: 41 42
    Exp <ptr> (61)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 20 30 32 33 34 35 36 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 73 74
    Args <ptr> (62)
        on left: 73 74
        on right: 65 73


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

   11 StructSpecifier: STRUCT . ID LC DefList RC
   12                | STRUCT . ID
   13                | STRUCT . LC DefList RC

    ID  shift, and go to state 10
    LC  shift, and go to state 11


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt
    6       | Specifier . ArrayDec SEMI
    8       | Specifier . SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FuncDec     go to state 19
    ArrayDec    go to state 20


State 8

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   11 StructSpecifier: STRUCT ID . LC DefList RC
   12                | STRUCT ID .

    LC  shift, and go to state 21

    $default  reduce using rule 12 (StructSpecifier)


State 11

   13 StructSpecifier: STRUCT LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 23
    Def              go to state 24


State 12

    0 $accept: program $end .

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 14

   19 FuncDec: error . RP
   22 ArrayDec: error . RB

    RP  shift, and go to state 25
    RB  shift, and go to state 26


State 15

   16 VarDec: ID .
   17 FuncDec: ID . LP VarList RP
   18        | ID . LP RP
   20 ArrayDec: ID . LB Exp RB
   21         | ID . LB RB

    LP  shift, and go to state 27
    LB  shift, and go to state 28

    $default  reduce using rule 16 (VarDec)


State 16

    8 ExtDef: Specifier SEMI .

    $default  reduce using rule 8 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 29


State 18

   14 ExtDecList: VarDec .
   15           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 30

    $default  reduce using rule 14 (ExtDecList)


State 19

    5 ExtDef: Specifier FuncDec . CompSt

    error  shift, and go to state 31
    LC     shift, and go to state 32

    CompSt  go to state 33


State 20

    6 ExtDef: Specifier ArrayDec . SEMI

    SEMI  shift, and go to state 34


State 21

   11 StructSpecifier: STRUCT ID LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 24


State 22

   39 Def: Specifier . DecList SEMI
   40    | Specifier . ArrayDec SEMI

    error  shift, and go to state 36
    ID     shift, and go to state 37

    VarDec    go to state 38
    ArrayDec  go to state 39
    DecList   go to state 40
    Dec       go to state 41


State 23

   13 StructSpecifier: STRUCT LC DefList . RC

    RC  shift, and go to state 42


State 24

   38 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 24


State 25

   19 FuncDec: error RP .

    $default  reduce using rule 19 (FuncDec)


State 26

   22 ArrayDec: error RB .

    $default  reduce using rule 22 (ArrayDec)


State 27

   17 FuncDec: ID LP . VarList RP
   18        | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 44
    STRUCT  shift, and go to state 3

    Specifier        go to state 45
    StructSpecifier  go to state 8
    VarList          go to state 46
    ParamDec         go to state 47


State 28

   20 ArrayDec: ID LB . Exp RB
   21         | ID LB . RB

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    RB        shift, and go to state 53
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 60


State 29

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 30

   15 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 61

    ExtDecList  go to state 62
    VarDec      go to state 18


State 31

   27 CompSt: error . RC

    RC  shift, and go to state 63


State 32

   26 CompSt: LC . DefList StmList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 37 (DefList)

    Specifier        go to state 22
    StructSpecifier  go to state 8
    DefList          go to state 64
    Def              go to state 24


State 33

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 34

    6 ExtDef: Specifier ArrayDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 35

   11 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 65


State 36

   22 ArrayDec: error . RB

    RB  shift, and go to state 26


State 37

   16 VarDec: ID .
   20 ArrayDec: ID . LB Exp RB
   21         | ID . LB RB

    LB  shift, and go to state 28

    $default  reduce using rule 16 (VarDec)


State 38

   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 66

    $default  reduce using rule 43 (Dec)


State 39

   40 Def: Specifier ArrayDec . SEMI

    SEMI  shift, and go to state 67


State 40

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 41

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 41 (DecList)


State 42

   13 StructSpecifier: STRUCT LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 43

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 44

   18 FuncDec: ID LP RP .

    $default  reduce using rule 18 (FuncDec)


State 45

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 61

    VarDec  go to state 70


State 46

   17 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 71


State 47

   23 VarList: ParamDec .
   24        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 72

    $default  reduce using rule 23 (VarList)


State 48

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 49

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   67    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 67 (Exp)


State 50

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 51

   70 Exp: CHAR .

    $default  reduce using rule 70 (Exp)


State 52

   53 Exp: LP . Exp RP

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 74


State 53

   21 ArrayDec: ID LB RB .

    $default  reduce using rule 21 (ArrayDec)


State 54

   54 Exp: MINUS . Exp

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 75


State 55

   55 Exp: NOT . Exp

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 76


State 56

   71 Exp: BREAK .

    $default  reduce using rule 71 (Exp)


State 57

   72 Exp: CONTINUE .

    $default  reduce using rule 72 (Exp)


State 58

   57 Exp: SELFADD . Exp

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 77


State 59

   59 Exp: SELFSUB . Exp

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 78


State 60

   20 ArrayDec: ID LB Exp . RB
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   56    | Exp . SELFADD
   58    | Exp . SELFSUB
   60    | Exp . ADD_ASSIGNOP Exp
   61    | Exp . MINUS_ASSIGNOP Exp
   62    | Exp . STAR_ASSIGNOP Exp
   63    | Exp . DIV_ASSIGNOP Exp
   64    | Exp . DOT Exp

    RELOP           shift, and go to state 79
    RB              shift, and go to state 80
    ASSIGNOP        shift, and go to state 81
    PLUS            shift, and go to state 82
    MINUS           shift, and go to state 83
    STAR            shift, and go to state 84
    DIV             shift, and go to state 85
    AND             shift, and go to state 86
    OR              shift, and go to state 87
    DOT             shift, and go to state 88
    ADD_ASSIGNOP    shift, and go to state 89
    MINUS_ASSIGNOP  shift, and go to state 90
    STAR_ASSIGNOP   shift, and go to state 91
    DIV_ASSIGNOP    shift, and go to state 92
    SELFADD         shift, and go to state 93
    SELFSUB         shift, and go to state 94


State 61

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 62

   15 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 15 (ExtDecList)


State 63

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 64

   26 CompSt: LC DefList . StmList RC

    error     shift, and go to state 31
    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    LC        shift, and go to state 32
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    RETURN    shift, and go to state 95
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    IF        shift, and go to state 96
    WHILE     shift, and go to state 97
    FOR       shift, and go to state 98
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    RC  reduce using rule 28 (StmList)

    CompSt   go to state 99
    StmList  go to state 100
    Stmt     go to state 101
    Exp      go to state 102


State 65

   11 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 66

   44 Dec: VarDec ASSIGNOP . Exp

    INT       shift, and go to state 48
    ID        shift, and go to state 49
    FLOAT     shift, and go to state 50
    CHAR      shift, and go to state 51
    LP        shift, and go to state 52
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    BREAK     shift, and go to state 56
    CONTINUE  shift, and go to state 57
    SELFADD   shift, and go to state 58
    SELFSUB   shift, and go to state 59

    Exp  go to state 103


State 67

   40 Def: Specifier ArrayDec SEMI .

    $default  reduce using rule 40 (Def)


State 68

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 69

   42 DecList: Dec COMMA . DecList
